# Rustiq

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: rustiq.yml
ai/: CMakeLists.txt  Cargo.toml  README.md
ai/data/tests_json/: sample.json
ai/data/tests_toml/: sample.toml
ai/data/tests_xml/: sample.xml
ai/data/tests_yml/: sample.yml
ai/include/: Parser.hpp  rustiq.hpp
ai/src/: main.cpp
ai/src/Analyzer/: Analyzer.cpp  Analyzer.hpp
ai/src/Core/: Core.cpp  Core.hpp
ai/src/DataFrame/: DataFrame.cpp  DataFrame.hpp
ai/src/DataLoader/: DataLoader.cpp  DataLoader.hpp
ai/src/DataLoader/ChunkObject/: Chunk.cpp  Chunk.hpp
ai/src/DataLoader/Factory/: ParserFactory.cpp  ParserFactory.hpp
ai/src/DataLoader/Parsers/: CsvParser.cpp  CsvParser.hpp  JsonLParser.cpp  JsonLParser.hpp  JsonParser.cpp  (+11 more)
ai/src/Insight/: InsightEngine.cpp  InsightEngine.hpp
ai/src/LLM/: Attention.cpp  Attention.hpp  FeedForward.cpp  FeedForward.hpp  LayerNorm.cpp  LayerNorm.hpp  PositionalEncoding.cpp  PositionalEncoding.hpp  Transformer.cpp  Transformer.hpp
ai/src/ML/: Ml.cpp  Ml.hpp
ai/src/TextGen/: TextGenerator.cpp  TextGenerator.hpp
ai/src/Tokenizer/: Tokenizer.cpp  Tokenizer.hpp  Vocab.cpp  Vocab.hpp
ai/src/Training/: Optimizer.cpp  Optimizer.hpp  Scheduler.cpp  Scheduler.hpp  Trainer.cpp  Trainer.hpp
ai/src/Utils/: Logger.cpp  Logger.hpp  Utils.cpp  Utils.hpp
ai/src/nn/: Activation.cpp  Activation.hpp  Init.cpp  Init.hpp  Loss.cpp  Loss.hpp  MatMul.cpp  MatMul.hpp  Tensor.cpp  Tensor.hpp
backend/: go.mod
frontend/: package.json
scripts/: dev.sh
(+2 files in other folders)
